# ml-aspera

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  ACKNOWLEDGEMENTS  Dockerfile  Makefile  Pipfile  README.md  experiments.md  setup.cfg
assets/: asper_bench_2025-05-20-1533.tgz  asper_bench_2025-05-27-1153.tgz
src/aspera/: __init__.py  aliases.py  constants.py  dataset_schema.py  evaluator.py  llm_evaluator.py  parser.py  ratelimiter.py  readers.py  scenario.py  utils.py  writers.py
src/aspera/agent/: base_agent.py  complete_codebase_knowledge.py  primitives_selection_agent.py  sample_solution_tools.py
src/aspera/apps/: __init__.py  ai_assistant.py  company_directory.py  contacts.py  exceptions.py  files.py  messaging.py  navigation.py  reminder.py  room_booking.py  time_utils.py  user_device_settings.py  work_calendar.py
src/aspera/apps_implementation/: __init__.py  company_directory.py  exceptions.py  files.py  room_booking.py  time_utils.py  work_calendar.py
src/aspera/code_utils/: code_symbol.py  utils.py
src/aspera/completer/: __init__.py  anthropic_completer.py  completer.py  completer_type.py  gemini_completer.py  hf_completer.py  openai_completer.py  utils.py
src/aspera/configs/agent/: complete_codebase_knowledge.yaml  complete_codebase_knowledge_ss.yaml  gemini_primitives_selection.yaml  guideline_primitives_selection.yaml  guideline_primitives_selection_ss.yaml  primitives_selection.yaml  sample_solution_tools.yaml  sample_solution_tools_ss.yaml
src/aspera/configs/agent/completer/: gemini.yaml  huggingface.yaml  openai.yaml
src/aspera/configs/agent/guidelines/: gemini_guidelines.yaml
src/aspera/configs/agent/parser/: default.yaml
src/aspera/configs/agent/primitives_selection_guidelines/: default.yaml  no_guidelines.yaml
src/aspera/configs/endpoints/: visualisation.yaml
src/aspera/configs/llm_evaluator/: guidelines_after.yaml  guidelines_first.yaml  guidelines_first_with_docstring_instruction.yaml
src/aspera/configs/llm_evaluator/completer/: openai.yaml
src/aspera/configs/llm_evaluator/guidelines/: default.yaml  refined.yaml  refined_orig.yaml
src/aspera/configs/llm_evaluator/parser/: default.yaml  simple_program_finder.yaml
src/aspera/configs/miscellaneous/: format_results_with_sample_soln.yaml  normalise_annotations.yaml  update_annotations.yaml
src/aspera/configs/query_gen/: org_events.yaml
src/aspera/configs/query_gen/annotation/: default.yaml
src/aspera/configs/query_gen/generation_args/: default.yaml
src/aspera/configs/query_gen/guidelines/: no_guidelines.yaml  org_events.yaml
src/aspera/configs/query_gen/parser/: default.yaml
src/aspera/configs/query_gen/turn_templates/: default.yaml
src/aspera/configs/query_label/: navigation_events.yaml  org_events.yaml
src/aspera/configs/query_label/annotation/: default.yaml
src/aspera/configs/query_label/generation_args/: default.yaml
src/aspera/configs/query_label/guidelines/: navigation_events.yaml  no_guidelines.yaml  org_events.yaml
src/aspera/configs/query_label/parser/: default.yaml
src/aspera/configs/query_label/turn_templates/: default.yaml
src/aspera/endpoints/: agent_runner.py  interactive_annotate_queries.py  interactive_generate_queries.py  llm_judge_evaluator.py  view_agent_results_jsonl.py  visualisation.py
src/aspera/examples/: work_calendar_evaluation.py  work_calendar_llm_evaluator_4_icl.py  work_calendar_query_solution.py  work_calendar_runtime_setup.py  work_calendar_single_shot.py
src/aspera/execution_evaluation_tools/: time_utils.py  work_calendar.py
src/aspera/execution_evaluation_tools_implementation/: exceptions.py  time_utils.py  work_calendar.py
src/aspera/interactive/: annotation_manager.py  annotation_session.py  console_messages.py  display.py  generation_session.py  session.py  utils.py
src/aspera/prompting/: primitives_selection_prompts.py  primitives_selection_templates.py  prompt_utils.py  system_turn_prompts.py  system_turn_templates.py  user_turn_prompt_formatters.py  user_turn_prompts.py  user_turn_templates.py  utils.py
src/aspera/runtime_state_generation_tools/: company_directory.py  room_booking.py  work_calendar.py
src/aspera/runtime_state_generation_tools_implementation/: company_directory.py  room_booking.py  utils.py  work_calendar.py
src/aspera/simulation/: database_schemas.py  execution_context.py  execution_environment.py  utils.py
tests/: conftest.py  test_code_utils.py  test_completer.py  test_evaluator.py  test_parser.py  test_utils.py
tests/apps_implementation/: company_directory.py  room_booking.py  time_utils.py  work_calendar.py  work_calendar_find_available_slots.py  work_calendar_utils.py
tests/runtime_state_generation_tools_implementation/: comany_directory.py  company_directory_org_simulation.py  room_booking.py  work_calendar.py
tests/simulation/: execution_context.py
